# usermood

./: .gitmodules  .hgsub  .hgsubstate  CMakeLists.txt  README  config.inc  definitions.h  iusermood.h  translations.inc  usermood.cpp  usermood.h  usermood.pri  usermood.pro  usermooddialog.cpp  usermooddialog.h  usermooddialog.ui
resources/menuicons/shared/: usermood.def.xml
resources/moodicons/shared/: icon.def.xml
translations/.tx/: config
translations/de/: usermood.ts
translations/en/: usermood.ts
translations/es/: usermood.ts
translations/pl/: usermood.ts
translations/ru/: usermood.ts
translations/uk/: usermood.ts
